--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -75,6 +75,7 @@
   </script>
 
   <link rel="stylesheet" href="{{ 'theme.css' | asset_url }}" type="text/css" media="print" onload="this.media='all';onLoadStylesheet()">
+  <link rel="stylesheet" href="{{ 'styles.css' | asset_url }}" type="text/css" media="print" onload="this.media='all';onLoadStylesheet()">
 
   <style>
     {{ header_font | font_face: font_display: 'swap' }}
@@ -139,6 +140,7 @@
         predictiveSearchShowVendor: {{ settings.predictive_search_show_vendor | json }}
       },
       stylesheet: "{{ 'theme.css' | asset_url }}"
+
     }
 
     document.documentElement.className = document.documentElement.className.replace('no-js', 'js');
