--- a/assets/styles.css.liquid
+++ b/assets/styles.css.liquid
@@ -3,6 +3,8 @@
 $Color-Border:#cccccc;
 $Color-black: #0000;
 $Color-white: #ffffff;
+$Head-hight: 56px;
+
 
 /* FONTS IMPORT */
 
@@ -133,3 +135,16 @@ h1-serif
       font-weight: normal;
       border: 0;
       border-radius: 0;
+
+      .site-header{
+        height: $Head-hight;
+        position: fixed;
+        width: 100%;
+        z-index: 999;
+        padding: 8px 20px 8px 20px;
+    
+        }
+        .site-header-icon{
+          padding: 0;
+
+            }
