--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -136,9 +136,18 @@
     </div>
   {%- endif -%}
 {%- endcapture -%}
+{% comment %} escript da importação do logo {% endcomment %}
+<script> console.log({{ section.settings.logo | json }});</script>
+{% comment %} end of logo script {% endcomment %}
 
 <footer class="site-footer critical-hidden" role="contentinfo" data-section-id="{{ section.id }}" data-section-type="footer-section">
-  <div class="page-width">
+<div class="page-width">
+
+{% comment %} localização da imagem nova   {% endcomment %}
+<img src="{{ section.settings.log | img_url: '300x300'}}" />
+{% comment %} fim da localização {% endcomment %}
+
+
     <div class="site-footer__content">
       {%- for block in section.blocks -%}
 
@@ -375,6 +384,37 @@
   },
   "max_blocks": 4,
   "settings": [
+{
+      "type": "image_picker",
+      "id": "logo",
+      "label": {
+        "cs": "Obrázek loga",
+        "da": "Logobillede",
+        "de": "Logo-Foto",
+        "en": "Logo image",
+        "es": "Logo",
+        "fi": "Logokuva",
+        "fr": "Image du logo",
+        "hi": "लोगो इमेज",
+        "it": "Immagine del logo",
+        "ja": "ロゴ画像",
+        "ko": "로고 이미지",
+        "nb": "Logobilde",
+        "nl": "Afbeelding van logo",
+        "pl": "Obraz logo",
+        "pt-BR": "Imagem do logotipo",
+        "pt-PT": "Imagem do logótipo",
+        "sv": "Logobild",
+        "th": "รูปภาพโลโก้",
+        "tr": "Logo görseli",
+        "vi": "Hình ảnh logo",
+        "zh-CN": "logo 图片",
+        "zh-TW": "標誌圖片"
+      }
+    },
+
+
+
     {
       "type": "header",
       "content": {
